fix scroll top jumping

--- a/src/index.css
+++ b/src/index.css
@@ -88,7 +88,8 @@ canvas {
 }
 
 @utility h-fix {
-  @apply h-[calc(var(--vh)*100)];
+  height: calc(var(--vh, 1vh) * 100);
+  height: 100dvh;
 }
 
 .masked-img {
